--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cerrar_torno">Cerrar Torno</string>
     <string name="todo">TODO</string>
+    <string name="txtSGM">Selecciona un grupo muscular</string>
 </resources>
